--- a/.config
+++ b/.config
@@ -25,8 +25,8 @@ function set_camera_env()
             ;;
         M50 | m50)
             export ML_PLATFORM="M50.110"
-            export ML_CARD_TYPE="cf"
-            export ML_QEMU_TYPE="-legacy"
+            export ML_CARD_TYPE="sd"
+            export ML_QEMU_TYPE=""
             ;;
         60D | 60d)
             export ML_PLATFORM="60D.111"
