--- a/.config
+++ b/.config
@@ -18,6 +18,12 @@ function set_camera_env()
             export ML_PLATFORM="200D.101"
             export ML_CARD_TYPE="sd"
             ;;
+        2000D | 2000d)
+            export ML_PLATFORM="2000D.110"
+            export ML_CARD_TYPE="sd"
+            export ML_TYPE="minimal/hello-world"
+            export ML_QEMU_TYPE="-legacy"
+            ;;
         50D | 50d)
             export ML_PLATFORM="50D.109"
             export ML_CARD_TYPE="cf"
