Added option to guess model from PWD

--- a/.config
+++ b/.config
@@ -6,10 +6,22 @@ export ML_CARD_DEVICE_CF="E:"
 export ML_CARD_DEVICE_SD="I:"
 export ML_CARD_FS="drvfs"
 
+function guess_camera_from_path()
+{
+    local model=$(pwd | sed -nr "s|.*/platform/(.*)\.[0-9]+.*|\1|p")
+    [[ -z "${model}" ]] && log error "Unable to guess model, you must provide it explicitly!"
+
+    log info "Model guessed: ${model}"
+    set_camera_env $model
+}
+
 function set_camera_env()
 {
     [ -z "${1}" ] && log error "No platform provided!"
     case ${1} in
+        guess)
+            guess_camera_from_path
+            ;;
         R | r)
             export ML_PLATFORM="R.180"
             export ML_CARD_TYPE="sd"
